Styles adjustments, like setting the button to position absolute. That solves the jump that happened when hovering the <h3>. JavaScript setting the button's width to match the <h3> height.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,40 +1,65 @@
 :root {
-    --cwpl-icon-margin-left: .32rem;
+    --cwss-icon-margin-left: .32rem;
+    --cwss-icon-width: 2rem;
+    --icon-color: #0099FF;
 }
 
-.cwpl-h3-link-icon {
+h3.cwss-h3 {
+    display: flex;
+    /* min-height: 28px; */
+}
+
+.cwss-h3-wrapper {
+    position: relative;
+    padding-right: 2.5rem;
+}
+
+.cwss-h3-link-icon {
     display: block;
-    width: fit-content;
-  
-    margin-left: var( --cwpl-icon-margin-left );
-    transition: all .2s ease-in-out;
+    width: 100%;
+    max-width: var( --cwss-icon-width);
+
+    padding: 0;
+    margin-left: var( --cwss-icon-margin-left );
+    
 
     border: 0;
     background-color: transparent;
     outline: 0;
     cursor: pointer;
+
+    transition: all .2s ease-in-out;
+
+    position: absolute;
+    right: 0;
+    top: 0;
 }
 
-.cwpl-h3-link-icon:hover {
-    transform: scale(1.2) rotate(5deg);
+.cwss-h3-link-icon:hover {
+    background-color: transparent;
+}
+
+.cwss-h3-link-icon:hover {
+    transform: scale(1.1) rotate(5deg);
     transition: all .2s ease-in-out;
 }
 
+.cwss-h3-link-icon svg * {
+    fill: var( --icon-color );
+}
 
-.cwpl-h3-link-icon img {
+
+.cwss-h3-link-icon img {
     display:block;
     width: 1.4rem;
 }
 
-h3 {
-    display: flex;
-    min-height: 28px;
-}
 
-h3 > .cwpl-h3-link-icon {
+
+h3 .cwss-h3-link-icon {
     display: none;
 }
 
-h3:hover > .cwpl-h3-link-icon {
+h3:hover .cwss-h3-link-icon {
     display: block;
 }
